# bevy-trait-query

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  release.toml
.github/workflows/: ci.yml
benches/: all.rs  concrete.rs  existential.rs  fragmented.rs  one.rs  universal.rs
bevy-trait-query/: Cargo.toml
bevy-trait-query-impl/: Cargo.toml  README.md
bevy-trait-query-impl/src/: lib.rs
bevy-trait-query/src/: all.rs  lib.rs  one.rs  tests.rs
bevy-trait-query/src/all/: mod.rs
bevy-trait-query/src/all/core/: fetch.rs  mod.rs  read.rs  write.rs
bevy-trait-query/src/all/impls/: all.rs  mod.rs
bevy-trait-query/src/internal/: dyn_constructor.rs  marker.rs  mod.rs  register_ext.rs  trait_registry.rs  trait_state.rs  zip_exact.rs
bevy-trait-query/src/one/: mod.rs
bevy-trait-query/src/one/core/: change_detection.rs  fetch.rs  mod.rs
bevy-trait-query/src/one/impls/: mod.rs  one.rs  one_added.rs  one_changed.rs  with_one.rs  without_any.rs
examples/: foo.rs  people.rs  universal.rs
proc-macro/: Cargo.toml
proc-macro/src/: lib.rs
src/: all.rs  change_detection.rs  lib.rs  multiple_read.rs  multiple_write.rs  one.rs  query_filter.rs  singular_read.rs  singular_write.rs  tests.rs
