[workspace]
resolver = "2"
members = [
  "bevy-trait-query",
  "bevy-trait-query-impl"
]

[workspace.dependencies]
bevy-trait-query-impl = { path = "bevy-trait-query-impl" }
tracing = "0.1"
bevy_ecs = "0.14"
bevy_app = "0.14"
bevy_core = "0.14"

# dev
criterion = "0.5"
bevy = { version = "0.14", default-features = false }

