[workspace]
resolver = "2"
members = [
  "bevy-trait-query",
  "bevy-trait-query-impl"
]

[workspace.dependencies]
tracing = "0.1"
bevy_ecs = "0.15"
bevy_app = "0.15"
bevy_core = "0.15"

# proc macro
bevy-trait-query-impl = { version = "0.7.0", path = "./bevy-trait-query-impl" }
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro-crate = "3"

# dev deps
criterion = "0.5"
bevy = { version = "0.15", default-features = false }
