[package]
name = "bevy-trait-query-impl"
version = "0.7.0"
edition = "2021"

description = "Procedural macro for `bevy-trait-query`"
repository = "https://github.com/JoJoJet/bevy-trait-query/"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "plugin", "query", "trait"]
categories = ["game-development"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn = { workspace = true, features = ["full"] }
quote.workspace = true
proc-macro-crate.workspace = true
